# simple_lang

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
Include/: ast.h  compiler.h  lexer.h  misc.h  parser.h  settings.h  token.h  utils.h  vm.h
LangKernel/: CMakeLists.txt  ast.c  compiler.c  lexer.c  main.c  misc.c  parser.c  utils.c  vm.c
Tests/: CMakeLists.txt  test_compiler.c  test_lexer.c  test_parser.c
